--- a/src/crypto-bank.Database/crypto-bank.Database.csproj
+++ b/src/crypto-bank.Database/crypto-bank.Database.csproj
@@ -10,10 +10,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5"/>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0"/>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4"/>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\crypro-bank.Domain\crypro-bank.Domain.csproj"/>
     <ProjectReference Include="..\crypto-bank.Domain\crypto-bank.Domain.csproj"/>
   </ItemGroup>
 
