--- a/src/crypto-bank.Domain/crypto-bank.Domain.csproj
+++ b/src/crypto-bank.Domain/crypto-bank.Domain.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.5.2"/>
+  </ItemGroup>
+
 </Project>
