CB#1 - Implement validators for api models

--- a/.editorconfig
+++ b/.editorconfig
@@ -126,7 +126,11 @@ csharp_preserve_single_line_statements = true
 csharp_preserve_single_line_blocks = true
 
 # ReSharper properties
+resharper_braces_for_ifelse = not_required_for_both
+resharper_braces_redundant = true
 resharper_csharp_wrap_after_declaration_lpar = true
 resharper_csharp_wrap_parameters_style = chop_if_long
+resharper_keep_existing_embedded_arrangement = false
 resharper_place_constructor_initializer_on_same_line = false
+resharper_place_simple_embedded_statement_on_same_line = false
 resharper_trailing_comma_in_multiline_lists = true
