--- a/src/crypto-bank.WebAPI/crypto-bank.WebAPI.csproj
+++ b/src/crypto-bank.WebAPI/crypto-bank.WebAPI.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.5.2"/>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0"/>
   </ItemGroup>
 
