--- a/src/crypto-bank.Infrastructure/crypto-bank.Infrastructure.csproj
+++ b/src/crypto-bank.Infrastructure/crypto-bank.Infrastructure.csproj
@@ -13,7 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0"/>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0"/>
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="6.30.1"/>
   </ItemGroup>
 
