--- a/src/crypto-bank.WebAPI/appsettings.json
+++ b/src/crypto-bank.WebAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "TokenOptions": {
+    "AccessTokenLifeTime": "00:05:00",
+    "RefreshTokenLifeTime": "01:00:00"
+  },
   "AllowedHosts": "*"
 }
