--- a/src/crypto-bank.WebAPI/crypto-bank.WebAPI.csproj
+++ b/src/crypto-bank.WebAPI/crypto-bank.WebAPI.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.5.2"/>
+    <PackageReference Include="MediatR" Version="12.0.1"/>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0"/>
   </ItemGroup>
 
