--- a/src/crypto-bank.WebAPI/crypto-bank.WebAPI.csproj
+++ b/src/crypto-bank.WebAPI/crypto-bank.WebAPI.csproj
@@ -9,11 +9,13 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.5.2"/>
+    <PackageReference Include="JetBrains.Annotations" Version="2022.3.1"/>
     <PackageReference Include="MediatR" Version="12.0.1"/>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0"/>
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\crypto-bank.Common\crypto-bank.Common.csproj"/>
     <ProjectReference Include="..\crypto-bank.Database\crypto-bank.Database.csproj"/>
     <ProjectReference Include="..\crypto-bank.Infrastructure\crypto-bank.Infrastructure.csproj"/>
   </ItemGroup>
