--- a/.editorconfig
+++ b/.editorconfig
@@ -9,10 +9,12 @@ indent_style = space
 # XML project files
 [*.{csproj,vbproj,vcxproj,vcxproj.filters,proj,projitems,shproj}]
 indent_size = 2
+ij_xml_space_inside_empty_tag = true
 
 # XML config files
 [*.{props,targets,ruleset,config,nuspec,resx,vsixmanifest,vsct}]
 indent_size = 2
+ij_xml_space_inside_empty_tag = true
 
 # Code files
 [*.{cs,csx,vb,vbx}]
