CB#7 - User Registration - Implement initial administrator creating

--- a/src/crypto-bank.WebAPI/appsettings.json
+++ b/src/crypto-bank.WebAPI/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Features": {
+    "Users": {
+      "AdministratorEmail": "admin@cb.com"
+    }
+  },
   "TokenOptions": {
     "AccessTokenLifeTime": "00:05:00",
     "RefreshTokenLifeTime": "01:00:00"
