CB#7 - Authentication - Implement authentication and creation of access token

--- a/src/crypto-bank.WebAPI/appsettings.json
+++ b/src/crypto-bank.WebAPI/appsettings.json
@@ -6,13 +6,15 @@
     }
   },
   "Features": {
+    "Auth": {
+      "Jwt": {
+        "AccessTokenLifeTime": "00:05:00",
+        "SigningKey": "b6351e17-4b51-44b3-bd14-f73c8f9d7a2d"
+      }
+    },
     "Users": {
       "AdministratorEmail": "admin@cb.com"
     }
-  },
-  "TokenOptions": {
-    "AccessTokenLifeTime": "00:05:00",
-    "RefreshTokenLifeTime": "01:00:00"
   },
   "AllowedHosts": "*"
 }
