--- a/src/crypto-bank.WebAPI/appsettings.json
+++ b/src/crypto-bank.WebAPI/appsettings.json
@@ -8,6 +8,8 @@
   "Features": {
     "Auth": {
       "Jwt": {
+        "Issuer": "crypto-bank",
+        "Audience": "crypto-bank",
         "AccessTokenLifeTime": "00:05:00",
         "SigningKey": "b6351e17-4b51-44b3-bd14-f73c8f9d7a2d"
       }
