CB#7 - Creating accounts - Implement options for maximum number of accounts

--- a/src/crypto-bank.WebAPI/appsettings.json
+++ b/src/crypto-bank.WebAPI/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "Features": {
+    "Accounts": {
+      "MaximumAccountsPerUser": 3
+    },
     "Auth": {
       "Jwt": {
         "Issuer": "crypto-bank",
