--- a/.editorconfig
+++ b/.editorconfig
@@ -128,6 +128,7 @@ csharp_preserve_single_line_statements = true
 csharp_preserve_single_line_blocks = true
 
 # ReSharper properties
+resharper_blank_lines_after_multiline_statements = 1
 resharper_braces_for_ifelse = not_required_for_both
 resharper_braces_redundant = true
 resharper_csharp_wrap_after_declaration_lpar = true
