--- a/src/crypto-bank.WebAPI/crypto-bank.WebAPI.csproj
+++ b/src/crypto-bank.WebAPI/crypto-bank.WebAPI.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.5.2" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
     <PackageReference Include="Isopoh.Cryptography.Argon2" Version="1.1.12" />
     <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" />
     <PackageReference Include="MediatR" Version="12.0.1" />
