CB#7 - Refactoring - Move connection string to config file

--- a/src/crypto-bank.WebAPI/appsettings.json
+++ b/src/crypto-bank.WebAPI/appsettings.json
@@ -21,5 +21,8 @@
       "AdministratorEmail": "admin@cb.com"
     }
   },
+  "ConnectionStrings": {
+    "CryptoBankDb": "Host=localhost;Port=5432;Database=crypto_bank_db;Username=postgres;Password=nonsecret"
+  },
   "AllowedHosts": "*"
 }
