CB#7 - Refactoring - Use argon2 config options from config file

--- a/src/crypto-bank.WebAPI/appsettings.json
+++ b/src/crypto-bank.WebAPI/appsettings.json
@@ -21,6 +21,13 @@
       "AdministratorEmail": "admin@cb.com"
     }
   },
+  "Argon2ConfigOptions": {
+    "TimeCost": 3,
+    "MemoryCostInMb": 8,
+    "Threads": 4,
+    "Lanes": 1,
+    "HashLengthInBytes": 32
+  },
   "ConnectionStrings": {
     "CryptoBankDb": "Host=localhost;Port=5432;Database=crypto_bank_db;Username=postgres;Password=nonsecret"
   },
