--- a/src/crypto-bank.WebAPI/appsettings.json
+++ b/src/crypto-bank.WebAPI/appsettings.json
@@ -7,7 +7,8 @@
   },
   "Features": {
     "Accounts": {
-      "MaximumAccountsPerUser": 3
+      "MaximumAccountsPerUser": 5,
+      "AccountNumberPrefix": "ACC"
     },
     "Auth": {
       "Jwt": {
