--- a/src/CryptoBank.WebAPI/appsettings.json
+++ b/src/CryptoBank.WebAPI/appsettings.json
@@ -16,7 +16,8 @@
         "Audience": "crypto-bank",
         "AccessTokenLifeTime": "00:05:00",
         "SigningKey": "b6351e17-4b51-44b3-bd14-f73c8f9d7a2d"
-      }
+      },
+      "RefreshTokenLifeTime": "7.00:00:00"
     },
     "Users": {
       "AdministratorEmail": "admin@cb.com"
