CB#5 - Refresh Token - Remove too old tokens

--- a/src/CryptoBank.WebAPI/appsettings.json
+++ b/src/CryptoBank.WebAPI/appsettings.json
@@ -17,7 +17,8 @@
         "AccessTokenLifeTime": "00:05:00",
         "SigningKey": "b6351e17-4b51-44b3-bd14-f73c8f9d7a2d"
       },
-      "RefreshTokenLifeTime": "7.00:00:00"
+      "RefreshTokenLifeTime": "7.00:00:00",
+      "RefreshTokenArchiveTime": "-2.00:00:00"
     },
     "Users": {
       "AdministratorEmail": "admin@cb.com"
