--- a/.editorconfig
+++ b/.editorconfig
@@ -132,6 +132,8 @@ resharper_blank_lines_after_multiline_statements = 1
 resharper_braces_for_ifelse = not_required_for_both
 resharper_braces_redundant = true
 resharper_csharp_wrap_after_declaration_lpar = true
+resharper_csharp_wrap_after_invocation_lpar = true
+resharper_csharp_wrap_arguments_style = chop_if_long
 resharper_csharp_wrap_parameters_style = chop_if_long
 resharper_keep_existing_embedded_arrangement = false
 resharper_max_attribute_length_for_same_line = 50
