--- a/src/CryptoBank.WebAPI/CryptoBank.WebAPI.csproj
+++ b/src/CryptoBank.WebAPI/CryptoBank.WebAPI.csproj
@@ -20,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+    <PackageReference Include="NBitcoin" Version="7.0.27" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.0" />
   </ItemGroup>
 
