CB#16 - deposit address - Move Network.TestNet to config

--- a/src/CryptoBank.WebAPI/appsettings.json
+++ b/src/CryptoBank.WebAPI/appsettings.json
@@ -20,6 +20,9 @@
       "RefreshTokenLifeTime": "7.00:00:00",
       "RefreshTokenArchiveTime": "-2.00:00:00"
     },
+    "Deposits": {
+      "BitcoinNetwork": "Test"
+    },
     "Users": {
       "AdministratorEmail": "admin@cb.com"
     }
