CB#18 - bitcoin deposit saving - Make simplies saving of deposit record

--- a/src/CryptoBank.WebAPI/appsettings.json
+++ b/src/CryptoBank.WebAPI/appsettings.json
@@ -21,7 +21,14 @@
       "RefreshTokenArchiveTime": "-2.00:00:00"
     },
     "Deposits": {
-      "BitcoinNetwork": "Test"
+      "BitcoinBlockchainScanInterval": "00:01:00",
+      "BitcoinNetwork": "Test",
+      "BitcoinClient": {
+        "User": "user",
+        "Password": "password",
+        "Host": "localhost",
+        "Port": 18332
+      }
     },
     "Users": {
       "AdministratorEmail": "admin@cb.com"
