--- a/tests/CryptoBank.WebAPI.Tests.Integration/CryptoBank.WebAPI.Tests.Integration.csproj
+++ b/tests/CryptoBank.WebAPI.Tests.Integration/CryptoBank.WebAPI.Tests.Integration.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="RestSharp" Version="110.2.0" />
+    <PackageReference Include="Testcontainers.PostgreSql" Version="3.3.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
