--- a/src/CryptoBank.WebAPI/CryptoBank.WebAPI.csproj
+++ b/src/CryptoBank.WebAPI/CryptoBank.WebAPI.csproj
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageReference Include="NBitcoin" Version="7.0.27" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.0" />
   </ItemGroup>
 
