--- a/src/CryptoBank.WebAPI/appsettings.json
+++ b/src/CryptoBank.WebAPI/appsettings.json
@@ -28,7 +28,8 @@
         "Password": "password",
         "Host": "localhost",
         "Port": 18332
-      }
+      },
+      "BitcoinTxConfirmationCount": 6
     },
     "Users": {
       "AdministratorEmail": "admin@cb.com"
