--- a/tests/CryptoBank.WebAPI.Tests.Integration/CryptoBank.WebAPI.Tests.Integration.csproj
+++ b/tests/CryptoBank.WebAPI.Tests.Integration/CryptoBank.WebAPI.Tests.Integration.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.8" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
     <PackageReference Include="Moq" Version="4.18.4" />
+    <PackageReference Include="Respawn" Version="6.1.0" />
     <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="Testcontainers.PostgreSql" Version="3.3.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
