--- a/infra/terraform/docker-compose.yml
+++ b/infra/terraform/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 name: "terraform-lab"
 
 services:
-  terraform-client: 
+  terraform-app: 
     build:
       context: .
       dockerfile: Dockerfile
