--- a/.github/workflows/backend-test.yml
+++ b/.github/workflows/backend-test.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./backend/src
+        working-directory: ./backend
     strategy:
       matrix:
         dotnet-version: ['7.0.x']
