architecture-diagrams - Introduce structurizr workspace

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ riderModule.iml
 .idea/config/applicationhost.config
 
 .terraform/
+
+# Structurizr workspace
+.structurizr
+docs/structurizr/workspace.json
